# magic_bean

./: 0001-wasm-fix.patch  0002-pickable-invisible.patch  Cargo.toml  README.md  magic_bean.js
assets/: untitled6.blend  untitled6.glb  untitled6.gltf
public/: index.html
src/: component.rs  cube.rs  debug_ui.rs  input.rs  lib.rs  main.rs  scene.rs  util.rs
src/component/: descriptor.rs
src/scene/: debug_ui.rs
